# mid2wav

./: CMakeLists.txt  Makefile
cmake/Modules/: FindFluidSynth.cmake  FindMp3Lame.cmake
src/: main.c
